--- a/templates/user_score.html
+++ b/templates/user_score.html
@@ -5,17 +5,38 @@
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="/static/nav.css">
+        <link rel="stylesheet" href="/static/addeditany.css">
         <style>
             main{
-                align-items: center;
-                margin-top: 100px;
+                max-width: 800px;
+                margin:auto;
+                margin-top: 30px;
+                padding: 20px;
+                border-radius: 20px;
+                background-color: rgba(255, 255, 255, 0.4);
+                backdrop-filter: blur(10px);
             }
-            legend{
-                text-align: center;
+            a[href*='viewquiz_attempt']{
+                background-color: rgb(91, 176, 91);
+                border-radius: 20px;
             }
-            table,th,td{
-                border: 2px solid blue;
+            table{
                 border-collapse: collapse;
+            }
+            th,td{
+                padding: 20px;
+                background-color: white;
+                border: 1px solid black;
+            }
+            th{
+                background-color: violet;
+            }
+            @media(max-width:770px){
+                table{
+                    display: block;
+                    width: 100%;
+                    overflow-x: auto;
+                }   
             }
         </style>
     </head>
@@ -25,18 +46,15 @@
                 <div class="navbar">
                     <a href="{{url_for('user_home')}}">Home</a>
                     <a href="{{url_for('user_score')}}">Scores</a>
-                    <a href="#">Summary</a>
+                    <a href="{{url_for('user_summary')}}">Summary</a>
                 </div>
                 <div class="down">
-                    <div>
-                        <input type="search" name="search" id="search" placeholder="Search for quizzes">
-                    </div>
                     <div class="down2">
-                    <button>Welcome {{name}}</button>
-                </div>
-                    <div class="drop">
-                        <a href="#">Edit profile</a>
-                        <a href="{{url_for('logout')}}">Logout</a>
+                        <button>Welcome {{name}}</button>
+                        <div class="drop">
+                            <a href="#">Edit profile</a>
+                            <a href="{{url_for('logout')}}">Logout</a>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -55,8 +73,8 @@
                     <td>{{s['quiz_name']}}</td>
                     <td>{{s['score']}}</td>
                     <td>{{s['q_count']}}</td>
-                    <td>{{s['time_stamp_of_attempt'] }}</td>
-                    <td><a style="color: black;" href="{{url_for('viewquiz_attempt',score_id=s['id'] )}}">View</a>
+                    <td>{{s['time'] }}</td>
+                    <td><a class="view" style="color: black;" href="{{url_for('viewquiz_attempt',score_id=s['id'] )}}">View</a>
                     </td>
                 </tr>
                 {% endfor %}
