Modified navigation bar urls

--- a/templates/user_viewquiz.html
+++ b/templates/user_viewquiz.html
@@ -45,9 +45,9 @@
         <header>
             <nav>
                 <div class="navbar">
-                    <a href="#">Home</a>
-                    <a href="#">Scores</a>
-                    <a href="#">Summary</a>
+                    <a href="{{url_for('user_home')}}">Home</a>
+                    <a href="{{url_for('user_score')}}">Scores</a>
+                    <a href="{{url_for('user_summary')}}">Summary</a>
                 </div>
                 <div class="down">
                     <div>
