Modified css for button

--- a/templates/user_viewquiz.html
+++ b/templates/user_viewquiz.html
@@ -25,6 +25,9 @@
                 background-color: rgb(91, 176, 91);
                 border-radius: 20px;
             }
+            a[href*='attend_quiz']:hover{
+                background-color: rgb(91, 255, 91);
+            }
             th,td{
                 padding: 10px;
                 background-color: white;
