--- a/templates/view_quizzes.html
+++ b/templates/view_quizzes.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/static/addeditany.css">
         <style>
             main{
-                max-width: 1100px;
+                max-width: 1000px;
                 margin:auto;
                 margin-top: 30px;
                 padding: 20px;
@@ -17,6 +17,7 @@
                 backdrop-filter: blur(10px);
             }
             #qtable{
+                margin:auto;
                 margin-bottom: 20px;
                 border-collapse: collapse;
                 table-layout: fixed;
