Modified css for table

--- a/templates/user_viewquiz.html
+++ b/templates/user_viewquiz.html
@@ -17,6 +17,7 @@
                 backdrop-filter: blur(10px);
             }
             #qtable{
+                margin:auto;
                 margin-bottom: 20px;
                 border-collapse: collapse;
                 table-layout: fixed;
