--- a/templates/viewquiz_attempt.html
+++ b/templates/viewquiz_attempt.html
@@ -5,39 +5,24 @@
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="/static/nav.css">
-        <style>
-            main{
-                align-items: center;
-                margin-top: 100px;
-            }
-            legend{
-                text-align: center;
-            }
-            table,th,td{
-                border: 2px solid blue;
-                border-collapse: collapse;
-            }
-        </style>
+        <link rel="stylesheet" href="/static/attempt.css">
     </head>
     <body>
-        <header>
+        <header> 
             <nav>
                 <div class="navbar">
                     <a href="{{url_for('user_home')}}">Home</a>
                     <a href="{{url_for('user_score')}}">Scores</a>
-                    <a href="#">Summary</a>
+                    <a href="{{url_for('user_summary')}}">Summary</a>
                 </div>
                 <div class="down">
-                    <div>
-                        <input type="search" name="search" id="search" placeholder="Search for quizzes">
-                    </div>
                     <div class="down2">
-                    <button>Welcome {{name}}</button>
-                </div>
-                    <div class="drop">
-                        <a href="#">Edit profile</a>
-                        <a href="{{url_for('logout')}}">Logout</a>
-                    </div>
+                        <button>Welcome {{name}}</button>
+                        <div class="drop">
+                            <a href="#">Edit profile</a>
+                            <a href="{{url_for('logout')}}">Logout</a>
+                        </div>
+                    </div>                    
                 </div>
             </nav>
         </header>
