--- a/static/addeditany.css
+++ b/static/addeditany.css
@@ -91,6 +91,7 @@ input[type="submit"]:hover,.qadd:hover{
     margin: 10px;
     padding: 12px 15px;
     font-size: medium;
+    font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
