--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -26,7 +26,7 @@
                     <div class="down2">
                         <button>Welcome {{name}}</button>
                         <div class="drop">
-                            <a href="#">Edit profile</a>
+                            <a href="{{url_for('edit_profile')}}">Edit profile</a>
                             <a href="{{url_for('logout')}}">Logout</a>
                         </div>
                     </div>
