--- a/templates/register.html
+++ b/templates/register.html
@@ -62,6 +62,12 @@
             display: flex;
             justify-content: center;
         }
+        .cat{
+            color: red;
+            background-color: rgba(255,255,255,0.2);
+            font-size: 30px;
+            font-weight: bold;
+        }
     </style>
     <script>
         function validatepwd(){
@@ -103,6 +109,13 @@
     <body>
         <main> 
             <div class="container">
+                    {% with msgs = get_flashed_messages(with_categories=True) %}
+                    {% if msgs %}
+                        {% for cat, msg in msgs %}
+                            <div class="cat">{{ msg }}</div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
                 <form action="{{url_for('register')}}" method="POST">
                 <h1>Zap into the Quiz Master</h1>
                 <div class="input-cont">
